--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,6 +11,8 @@ jobs:
 
       - name: hello-action
         uses: ./.github/actions/hello-world    
-#        with:
-#          firstGreeting: "Learning Lab User"
+        with:
+          firstGreeting: "Brock Samson"
+          secondGreeting: "Rusty Venture"
+          thirdGreeting: "The Might Monarch"
           
