--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,7 +12,7 @@ jobs:
       - name: hello-action
         uses: ./.github/actions/hello-world    
         with:
-#         firstGreeting: "Brock Samson"
-#         secondGreeting: "Rusty Venture"
+          firstGreeting: "Brock Samson"
+          secondGreeting: "Rusty Venture"
           thirdGreeting: "The Might Monarch"
           
