--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,18 +1,18 @@
-#name: Docker Actions
+name: Docker Actions
 
-#on: [push]
+on:
+  pull_request:
+    types: [labeled]
 
-#jobs:
-#  action:
-#    runs-on: ubuntu-latest
+jobs:
+  action:
+    runs-on: ubuntu-latest
 
-#    steps:
-#      - uses: actions/checkout@v1
+    steps:
+      - uses: actions/checkout@v1
 
-#      - name: hello-action
-#        uses: ./.github/actions/hello-world    
-#        with:
-#          firstGreeting: "Brock Samson"
-#          secondGreeting: "Rusty Venture"
-#          thirdGreeting: "The Might Monarch"
-          
+      - name: hello-action
+        uses: ./.github/actions/hello-world
+
+      - name: meow
+        uses: ./.github/actions/cat-facts
